docs(session): BUILDLOG for the Gradle attach route, the resume point moved to Max's reading of it, CLAUDE status at 0.1.10-beta
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RKfmQwTPajxBaLMffuRce5